- try to fix data choose btn bug

--- a/views/templates/Widgets/file-selector-ui.html
+++ b/views/templates/Widgets/file-selector-ui.html
@@ -15,6 +15,11 @@
          {% for dataset in available_datasets %}
          <tr>
             <td class="table-datalist-row">{{ dataset.name }}</td>
+            <td>
+                <button class='btn btn-oval btn-primary btn-sm btn-choose-data' type='button' data-inputname={{ dataset.name }}>
+                    choose
+                </button>
+            </td>
          </tr>
          {% endfor %}
       </tbody>
