--- a/views/public/css/bayesnet-style.css
+++ b/views/public/css/bayesnet-style.css
@@ -32,15 +32,21 @@
 }
 
 .form-select-file .table-datalist {
-   display: none;
+   display: block;
    position: absolute;
-   width: 350px;
+   width: 380px;
    background-color: white;
    border-radius: .28571429rem;
    box-shadow: 0 2px 4px 0 rgba(34, 36, 38, .12), 0 2px 10px 0 rgba(34, 36, 38, .15);
    border: 1px solid #d4d4d5;
    z-index: 998;
    overflow: scroll;
+   visibility: hidden;
+}
+
+.form-select-file #input_data {
+   float: right;
+   min-width: 380px;
 }
 
 .table-datalist td {
@@ -52,8 +58,17 @@
     height: 400px;
     display: block;
     margin: auto;
+   vertical-align: middle;
+}
+
+#img-loading {
+   display: block;
+   position: absolute;
+   top: 45%;
+   left: 45%;
 }
 
 #debug-canvas {
+   min-height: 30px;
    text-align: center;
 }
