--- a/views/templates/BayesNet/index.html
+++ b/views/templates/BayesNet/index.html
@@ -1,8 +1,5 @@
-{% extends "base.html" %}
-{% set navlink_l1 = 'apps' %}
-{% set navlink_l2 = 'Bayes Net' %}
-{% block head %}
-{% include "elements/_head.html" %}
+{% extends "base.html" %} {% set navlink_l1 = 'apps' %} {% set navlink_l2 = 'Bayes Net' %} {% block head %} {% include "elements/_head.html"
+%}
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 <!-- bokeh.js -->
 <!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css" rel="stylesheet" type="text/css">-->
@@ -13,26 +10,11 @@
 <link href="css/bayesnet-style.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.1.3/cytoscape.js"></script>
 <script src="js/bayesnet.js"></script>
-{% endblock %}
-{% block header %}
-{% include "elements/_header.html" %}
-{% endblock %}
-{% block sidebar %}
-{% include "elements/_sidebar.html" %}
-{% endblock %}
-{% block sidebar_footer %}
-{% include "elements/_sidebar_footer.html" %}
-{% endblock %}
-{% block footer %}
-{% include "elements/_footer.html" %}
-{% endblock %}
-{% block modal_media %}
-    {% include "elements/_modal_media.html" %}
-{% endblock %}
-{% block modal_confirm %}
-    {% include "elements/_modal_confirm.html" %}
-{% endblock %}
-{% block content %}
+<script src="js/plotly-latest.min.js"></script>
+{% endblock %} {% block header %} {% include "elements/_header.html" %} {% endblock %} {% block sidebar %} {% include "elements/_sidebar.html"
+%} {% endblock %} {% block sidebar_footer %} {% include "elements/_sidebar_footer.html" %} {% endblock %} {% block footer
+%} {% include "elements/_footer.html" %} {% endblock %} {% block modal_media %} {% include "elements/_modal_media.html" %}
+{% endblock %} {% block modal_confirm %} {% include "elements/_modal_confirm.html" %} {% endblock %} {% block content %}
 {% from "Widgets/param_ui.html" import param_selector %}
 <article class="content">
     <section class="section">
@@ -46,20 +28,16 @@
                         </div>
                     </div> -->
                     <div id="controls" class="card-block">
-                        {% include "Widgets/play-buttons.html" %}
-                        {% set alphas=[("0.01", 0.01), ("0.05", 0.05), ("0.1", 0.1), ("0.15", 0.15), ("0.2", 0.2)] %}
-                        {{ param_selector("sensitivity", alphas, id="alphas") }}
-                        {% set methods=[("L2 regularization", "ledoit_wolf"), ("Graphical Lasso", "glasso"), ("MLE", "mle"), ("PC Algorithm", "ic")] %}
-                        {{ param_selector("methods", methods, id="methods") }}
-                        {% set penalties=[("0.01", 0.01), ("0.1", 0.1), ("0.25", 0.25), ("0.5", 0.5), ("1", 1)] %}
-                        {{ param_selector("sparsity", penalties, id="penalties") }}
-                        {% set bins=[("2", 2), ("3", 3), ("4", 4), ("5", 5), ("10", 10)] %}
-                        {{ param_selector("bins", bins, id="bins") }}
-                        {% set pvals=[("0.01", 0.01), ("0.05", 0.05), ("0.1", 0.1), ("0.5", 0.5)] %}
-                        {{ param_selector("p-value", pvals, id="pvals") }}
-                        {% set ssamples=[("100", 100), ("500", 500), ("1000", 1000), ("All", 0)] %}
-                        {{ param_selector("subsample size", ssamples, id="ssamples") }}
-                        {% include "Widgets/file-selector-ui.html" %}
+                        {% include "Widgets/play-buttons.html" %} {% set alphas=[("0.01", 0.01), ("0.05", 0.05), ("0.1", 0.1), ("0.15", 0.15), ("0.2",
+                        0.2)] %} {{ param_selector("sensitivity", alphas, id="alphas") }} {% set methods=[("L2 regularization",
+                        "ledoit_wolf"), ("Graphical Lasso", "glasso"), ("MLE", "mle"), ("PC Algorithm", "ic")] %} {{ param_selector("methods",
+                        methods, id="methods") }} {% set penalties=[("0.01", 0.01), ("0.1", 0.1), ("0.25", 0.25), ("0.5",
+                        0.5), ("1", 1)] %} {{ param_selector("sparsity", penalties, id="penalties") }} {% set bins=[("2",
+                        2), ("3", 3), ("4", 4), ("5", 5), ("10", 10)] %} {{ param_selector("bins", bins, id="bins") }} {%
+                        set pvals=[("0.01", 0.01), ("0.05", 0.05), ("0.1", 0.1), ("0.5", 0.5)] %} {{ param_selector("p-value",
+                        pvals, id="pvals") }} {% set ssamples=[("100", 100), ("500", 500), ("1000", 1000), ("All", 0)] %}
+                        {{ param_selector("subsample size", ssamples, id="ssamples") }} {% include "Widgets/file-selector-ui.html"
+                        %}
                     </div>
                 </div>
             </div>
@@ -86,7 +64,13 @@
             </div>
             <div class="col col-xs-12 col-sm-12 col-md-5">
                 <div class="card sameheight-item">
+                    <div class="card-header card-header-sm bordered">
+                        <div class="header-block">
+                            <h3 class="title">Sample distribution</h3>
+                        </div>
+                    </div>
                     <div class="card-block">
+                        <div id="sample-dist-canvas"></div>
                     </div>
                 </div>
             </div>
