--- a/views/templates/StackSecure/index.html
+++ b/views/templates/StackSecure/index.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% block head %}
 {% include "elements/_head.html" %}
+<link rel="stylesheet" href="css/codemirror.css">
+
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-<!-- bokeh.js -->
-<!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css" rel="stylesheet" type="text/css">-->
-<!--<link href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css" rel="stylesheet" type="text/css">-->
-<!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js"></script>-->
-<!--<script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.js"></script>-->
-<!-- my own resource -->
-<link href="css/style.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.1.3/cytoscape.js"></script>
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/prettify.js"></script>
+
+<script src="js/codemirror.js"></script>
+<script src="js/clike.js"></script>
+<script src="js/stacksecure_index.js"></script>
 {% endblock %}
 {% block header %}
 {% include "elements/_header.html" %}
@@ -27,102 +27,182 @@
 {% block content %}
 <article class="content">
   <section class="section">
+    <!-- tabs -->
+      <div class="card sameheight-item">
+        <div class="card-block">
+          <div class="card-title-block">
+            <h3 class="title"> Stack Secure </h3>
+          </div>
+          <!-- Nav tabs -->
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a href="" class="nav-link active" data-target="#home-pills" aria-controls="home-pills" data-toggle="tab" role="tab">Editor</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link" data-target="#profile-pills" aria-controls="profile-pills" data-toggle="tab" role="tab">Explorer</a>
+            </li>
+          </ul>
+          <!-- Tab panes -->
+          <div class="tab-content">
+            <!-- Editor -->
+            <div class="tab-pane fade in active" id="home-pills">
+              <div class="row sameheight-container">
+                <div class="card card-default" id="code-snippet-card">
+                  <div class="card-header">
+                    <div class="header-block"> 
+                      <p class="title"> Code Snippet </p> 
+                    </div> 
+                  </div> 
+                  <div class="card-block">  </div> 
+                  <textarea id="editor">// Insert security-related Java code snippet</textarea>
+                  <div class="card-footer">
+                    <button id="analyze-security"type="button" class="btn btn-primary-outline">Analyze</button>
+                  </div> 
+                </div>
+              </div>
+            </div>
+            <!-- /.Editor -->
+            <!-- /.Explorer -->
+            <div class="tab-pane fade" id="profile-pills">
+              <div class="row sameheight-container">
+                <div class="card sameheight-item stats" data-exclude="xs">
+                  <div class="card-block">
+                    <div class="title-block">
+                      <h4 class="title"> Dataset Overview </h4>
+                      <p class="title-description">Uploaded file ... </p>
+                    </div>
+                    <div class="row row-sm stats-container">
+                      <div class="col-xs-12 col-sm-12 stat-col">
+                        <form id="file-upload" role="acttype" method="post" action="#" enctype="multipart/form-data">
+                          <fieldset class="form-group">
+                            <label for="upload-input"><span class="glyphicon glyphicon-open"></span> Upload Your .csv File</label>
+                            <input type="file" accept=".csv" class="btn btn-secondary" id="upload-input">
+                            <button id="btn-explore" class="btn btn-success btn-left">
+                              <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Explore
+                            </button>
+                          </fieldset>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row sameheight-container">
+                <div class="col-md-6"> 
+                  <div class="card card-danger" id="input-snippet-card"> 
+                    <div class="card-header"> 
+                      <div class="header-block"> 
+                        <p class="title"> Input Code Snippet </p> 
+                      </div> 
+                    </div> 
+                    <div class="card-block">  </div> 
+                    <div id="input-snippet"> 
+                      <pre id="pretty-input-snippet"> </pre>
+                    </div>
+                    <div class="card-footer">
+                      <button id=next-snippet type="button" class="btn btn-primary-outline">Next</button>
+                    </div> 
+                  </div> 
+                </div>
+                <div class="col-md-6"> 
+                  <div class="card card-success" id="similar-snippet-card"> 
+                    <div class="card-header"> 
+                      <div class="header-block"> 
+                        <p class="title"> Similar Code Snippet </p> 
+                      </div> 
+                    </div> 
+                    <div class="card-block">  </div> 
+                    <div id="input-similar-snippet"> 
+                      <pre id="pretty-input-similar-snippet"> </pre>
+                    </div>
+                    <div class="card-footer">
+                      <button id="next-similar-snippet"type="button" class="btn btn-primary-outline">Next</button>
+                    </div> 
+                  </div> 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <!-- /.card-block -->
+      </div>
+      <!-- /.card -->
+    <!-- /.col-xl-6 -->
     <!-- code snippets-->
-    <div class="row sameheight-container">
-      <div class="col-md-6"> 
-        <div class="card card-danger"> 
-          <div class="card-header"> 
-            <div class="header-block"> 
-              <p class="title"> Insecure Code Snippet </p> 
-            </div> 
-          </div> 
-          <div class="card-block">  </div> 
-          <pre class="prettyprint"><code>public static String encrypt(byte[] raw, byte[] clear) throws Exception {
-      Cipher cipher = Cipher.getInstance("AES");
-      cipher.init(Cipher.ENCRYPT_MODE, skeySpec);
-}</code>
-          </pre>
-          <div class="card-footer">
-            <button type="button" class="btn btn-primary-outline">Next</button>
-          </div> 
-        </div> 
-      </div>
-      <div class="col-md-6"> 
-        <div class="card card-success"> 
-          <div class="card-header"> 
-            <div class="header-block"> 
-              <p class="title"> Similar Secure Code Snippet </p> 
-            </div> 
-          </div> 
-          <div class="card-block">  </div> 
-          <pre class="prettyprint"><code>public static String encrypt(byte[] raw, byte[] clear) throws Exception {
-      Cipher cipher = Cipher.getInstance("AES/GCM/NoPadding");
-      cipher.init(Cipher.ENCRYPT_MODE, skeySpec);
-}</code>
-          </pre>
-          <div class="card-footer">
-            <button type="button" class="btn btn-primary-outline">Next</button>
-          </div> 
-        </div> 
-      </div>
-    <!-- annotations -->
     <!--
     <div class="row sameheight-container">
-      <div class="col-md-6">
-        <div class="card card-block">
-          <div class="title-block">
-            <h3 class="title"> Annotations </h3>
-          </div>
-          <form role="form">
-            <div class="form-group">
-              <label class="control-label">Security</label>
-              <div>
-                <label>
-                  <input class="radio" name="radios" type="radio">
-                  <span>secure</span>
-                </label>
-                <div>
-                  <label>
-                    <input class="radio" type="radio" name="radios" checked="checked">
-                     <span>insecure</span>
-                  </label>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
+      <div class="card card-default" id="code-snippet-card">
+        <div class="card-header">
+          <div class="header-block"> 
+            <p class="title"> Code Snippet </p> 
+          </div> 
+        </div> 
+        <div class="card-block">  </div> 
+        <textarea id="editor">
+// Insert security-related Java code snippet</textarea>
         <div class="card-footer">
-          <button type="button" class="btn btn-primary-outline">Annontate</button>
+          <button id="analyze-security"type="button" class="btn btn-primary-outline">Analyze</button>
         </div> 
       </div>
-      <div class="col-md-6">
-        <div class="card card-block">
+    </div>
+    <div class="row sameheight-container">
+      <div class="card sameheight-item stats" data-exclude="xs">
+        <div class="card-block">
           <div class="title-block">
-            <h3 class="title"> Annotations </h3>
+            <h4 class="title"> Dataset Overview </h4>
+            <p class="title-description">Uploaded file ... </p>
           </div>
-          <form role="form">
-            <div class="form-group">
-              <label class="control-label">Security</label>
-              <div>
-                <label>
-                  <input class="radio" name="radios" type="radio">
-                  <span>secure</span>
-                </label>
-                <div>
-                  <label>
-                    <input class="radio" type="radio" name="radios" checked="checked">
-                     <span>insecure</span>
-                  </label>
+          <div class="row row-sm stats-container">
+            <div class="col-xs-12 col-sm-12 stat-col">
+              <form id="file-upload" role="acttype" method="post" action="#" enctype="multipart/form-data">
+                <fieldset class="form-group">
+                  <label for="upload-input"><span class="glyphicon glyphicon-open"></span> Upload Your .csv File</label>
+                    <input type="file" accept=".csv" class="btn btn-secondary" id="upload-input">
+                </fieldset>
+                <div class="btn-group">
+                  <button id="btn-explore" class="btn btn-success btn-left"><span
+                        class="glyphicon glyphicon-search" aria-hidden="true"></span> Explore
+                  </button>
                 </div>
-              </div>
+              </form>
             </div>
-          </form>
+          </div>
         </div>
-        <div class="card-footer">
-          <button type="button" class="btn btn-primary-outline">Annotate</button>
+      </div>
+    </div>
+    <div class="row sameheight-container">
+      <div class="col-md-6"> 
+        <div class="card card-danger" id="input-snippet-card"> 
+          <div class="card-header"> 
+            <div class="header-block"> 
+              <p class="title"> Input Code Snippet </p> 
+            </div> 
+          </div> 
+          <div class="card-block">  </div> 
+          <div id="input-snippet"> 
+            <pre id="pretty-input-snippet"> </pre>
+          </div>
+          <div class="card-footer">
+            <button id=next-snippet type="button" class="btn btn-primary-outline">Next</button>
+          </div> 
         </div> 
       </div>
-    </div>-->
+      <div class="col-md-6"> 
+        <div class="card card-success" id="similar-snippet-card"> 
+          <div class="card-header"> 
+            <div class="header-block"> 
+              <p class="title"> Similar Code Snippet </p> 
+            </div> 
+          </div> 
+          <div class="card-block">  </div> 
+          <div id="input-similar-snippet"> 
+            <pre id="pretty-input-similar-snippet"> </pre>
+          </div>
+          <div class="card-footer">
+            <button id="next-similar-snippet"type="button" class="btn btn-primary-outline">Next</button>
+          </div> 
+        </div> 
+      </div>-->
   </section>
 </articile>
 {% endblock %}
