reset active link for stack secure app

--- a/templates/StackSecure/index.html
+++ b/templates/StackSecure/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% set navlink_l1 = 'apps' %} 
+{% set navlink_l2 = 'Stack Secure' %} 
 {% block head %}
 {% include "elements/_head.html" %}
 <link rel="stylesheet" href="css/codemirror.css">
