- stack secure java code detection works - redesign UI for bases network - add file info overlay in bayes network

--- a/public/css/bayesnet-style.css
+++ b/public/css/bayesnet-style.css
@@ -61,6 +61,22 @@
    vertical-align: middle;
 }
 
+#sample_dist_canvas {
+    width: 100%;
+    height: 400px;
+    display: block;
+    margin: auto;
+   vertical-align: middle;
+}
+
+#data_info_canvas {
+    width: 100%;
+    height: 400px;
+    display: block;
+    margin: auto;
+   vertical-align: middle;
+}
+
 #img-loading {
    display: block;
    position: absolute;
