--- a/templates/StackSecure/index.html
+++ b/templates/StackSecure/index.html
@@ -4,6 +4,7 @@
 {% block head %}
 {% include "elements/_head.html" %}
 <link rel="stylesheet" href="css/codemirror.css">
+<link rel="stylesheet" href="css/stacksecure-style.css">
 
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.1.3/cytoscape.js"></script>
@@ -55,7 +56,7 @@
                       <p class="title"> Code Snippet </p> 
                     </div> 
                   </div> 
-                  <div class="card-block">  </div> 
+                  <!-- <div class="card-block">  </div>  -->
                   <textarea id="editor">// Insert security-related Java code snippet</textarea>
                   <div class="card-footer">
                     <button id="analyze-security"type="button" class="btn btn-primary-outline">Analyze</button>
